--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: [Zhengming Zhang]
-logo: [nohup python train_parallel_pers_new.py --ip_address 128.32.112.218 --basicLabelRatio 0.8 --GPU_list 4567 --labeled 1]
+logo: [https://github.com/jhcknzzm/zhengming.github.io/blob/gh-pages/img/zzm_photo.jpg]
