--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: [Zhengming Zhang]
-logo: [https://github.com/jhcknzzm/zhengming.github.io/blob/gh-pages/img/zzm.jpg]
+description: [Ph.D student in information and communication engineering with the School of Information Science and Engineering, Southeast University]
