--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: [Zhengming Zhang]
-description: [Ph.D student in information and communication engineering with the School of Information Science and Engineering, Southeast University]
+description: [Ph.D student in information and communication engineering with the School of Information Science and Engineering Southeast University]
 logo: /img/zzm_photo.jpg
 google_analytics:
